更新部分代码，准备进入重构状态